temporarily remove jusdefi dependency for test deployment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,10 +7,7 @@ body {
 $primary: #5e35b1;
 $info: #27ccc0;
 
-$main-hover: #4e3096;
-$secondary-hover: #25ad9f;
-
-.is-main-hover { background: $main-hover }
-.is-secondary-hover { background: $secondary-hover }
+$primay-hover: #4e3096;
+$info-hover: #25ad9f;
 
 @import '~bulma';
