--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,18 +1,13 @@
 @import 'fontsource-ubuntu/400.css';
 @import 'fontsource-ubuntu/700.css';
 
-body {
-  font-family: 'Ubuntu' !important;
-}
-
 $primary: #5e35b1;
 $info: #27ccc0;
 
 $primay-hover: #4e3096;
 $info-hover: #25ad9f;
 
-@import '~bulma';
+$family-sans-serif: 'Ubuntu';
+$weight-semibold: 700;
 
-.title {
-  font-weight: 700 !important;
-}
+@import '~bulma';
