--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,3 +17,29 @@ button .material-design-icon {
   display: inline-flex;
   align-items: center;
 }
+
+div.is-loading {
+  position: relative;
+  pointer-events: none;
+  opacity: 0.5;
+
+  &:after {
+    @include loader;
+    position: absolute;
+    top: calc(50% - 2.5em);
+    left: calc(50% - 2.5em);
+    width: 5em;
+    height: 5em;
+    border-width: 0.25em;
+  }
+}
+
+div.is-not-loaded {
+  position: relative;
+  pointer-events: none;
+  opacity: 0.5;
+
+  * {
+    visibility: hidden;
+  }
+}
